tcw3/designer/tests/bad/input_field_not_comp.tcwdl
pub comp crate::Comp2 {
    const wm: tcw3_pal::Wm { pub set; }
    const const1: u32 { pub set; }

    // `const1` is not a component
    wire wire1: u32 = |const1.field| field;
    //~^ ERROR Can't refer to a field of something that is not a component
}
